Implement preliminary dus skeleton

--- a/logstash-dus.conf
+++ b/logstash-dus.conf
@@ -1,6 +1,6 @@
 input {
    file {
-      path => "D:/Dev/git/logstash-tester/dus/sample-dus.log"
+      path => "D:/Dev/git/logstash-shelter/dus/sample-dus.log"
 	  start_position => "beginning"
       sincedb_path => "./.sincedb"
    }
@@ -37,6 +37,11 @@ filter {
   }
   mutate {
     join => { "element" => "."}
+  }
+  if [event] =~ "TOTEPOSITION" {
+    mutate {
+      add_tag => ["parsed"]
+    }
   }
   if [event] =~ "TOTEPOSITION" {
     if [itemId] {
